[package]
name = "sdleditor"
version = "0.1.0"
authors = ["Paul Page <pjpage98@gmail.com>"]
edition = "2018"

[dependencies]

clipboard = "0.5.0"
unicode-segmentation = "1.3.0"
font-kit = "0.4.0"
nvim-rs = "0.1.0"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["ttf", "unsafe_textures"]
