[package]
name = "nvim-sdl"
version = "0.1.0"
authors = ["Paul Page <pjpage98@gmail.com>"]
edition = "2018"

[dependencies]

font-kit = "0.4.0"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["ttf", "unsafe_textures"]

[dependencies.neovim-lib]
git = "https://github.com/daa84/neovim-lib"
